Fixes cell shifting in evaluations

--- a/components/profile/shared/lists/Lists.module.scss
+++ b/components/profile/shared/lists/Lists.module.scss
@@ -53,6 +53,10 @@ table td svg.iconChevronDown {
   transition: transform 120ms ease-in-out;
 }
 
+table tr .detailRowCell {
+  width: 100%;
+}
+
 .expanderContent {
   width: 100%;
   position: absolute;
